# AutomatedTellerMachine

./: README.md
AutomatedTellerMachine/: ATM.cpp  ATM.h  CMakeLists.txt  Collection.h  DynamicVector.h  Transaction.cpp  Transaction.h  main.cpp
AutomatedTellerMachine/Inutil/: BanknoteQuantity.cpp  BanknoteQuantity.h  testBanknoteQuantity.cpp  testBanknoteQuantity.h
AutomatedTellerMachine/Tests/: TestCollection.cpp  TestCollection.h  TestDynamicVector.cpp  TestDynamicVector.h
